--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                 font-family:Arial;
             ">
                 <h1>
-                    I knew it! 😍❤️<br><br>
-                    I love you forever 💖
+                    माहीत होतं मला🙈🫂<br><br>
+                    कायम तुझाच Roo ❤️…
                 </h1>
             </div>
         `;
