--- a/index.html
+++ b/index.html
@@ -1,141 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>For You ❤️</title>
+<meta charset="UTF-8">
+<title>For My Love ❤️</title>
 
-    <style>
-        body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(135deg, #1a1a1a, #2a2a2a); /* subtle background */
-            font-family: Arial, Helvetica, sans-serif;
-        }
+<style>
+    body {
+        margin: 0;
+        height: 100vh;
+        background: linear-gradient(135deg, #2b0a0a, #0d0d0d);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Arial', sans-serif;
+        overflow: hidden;
+    }
 
-        /* Letter / paper container */
-        .container {
-            max-width: 680px;
-            padding: 40px 35px;
-            background: #fdf6e3; /* paper color */
-            border-radius: 14px;
-            box-shadow: 0 20px 45px rgba(0, 0, 0, 0.45);
-            text-align: center;
-            position: relative;
-        }
+    .scene {
+        text-align: center;
+    }
 
-        /* Light paper lines effect */
-        .container::before {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background: repeating-linear-gradient(
-                to bottom,
-                rgba(0,0,0,0.03),
-                rgba(0,0,0,0.03) 1px,
-                transparent 1px,
-                transparent 28px
-            );
-            border-radius: 14px;
-            pointer-events: none;
-        }
+    /* Chocolate */
+    .chocolate {
+        width: 200px;
+        height: 300px;
+        background: linear-gradient(180deg, #5a2a0c, #3b1a08);
+        border-radius: 15px;
+        position: relative;
+        cursor: pointer;
+        box-shadow: 0 15px 30px rgba(0,0,0,0.6);
+        overflow: hidden;
+    }
 
-        h1 {
-            color: #b03060;
-            margin-bottom: 20px;
-        }
+    /* Wrapper */
+    .wrapper {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(135deg, #8b0000, #ff4d6d);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: 22px;
+        font-weight: bold;
+        transition: transform 1s ease;
+        z-index: 2;
+    }
 
-        p {
-            font-size: 18px;
-            line-height: 1.8;
-            margin-bottom: 30px;
-            color: #333;
-        }
+    .open .wrapper {
+        transform: translateY(-100%);
+    }
 
-        h2 {
-            margin-bottom: 30px;
-            color: #444;
-        }
+    /* Love text */
+    .love-text {
+        margin-top: 30px;
+        font-size: 32px;
+        color: #ff4d6d;
+        opacity: 0;
+        transition: opacity 1s ease;
+    }
 
-        .buttons {
-            position: relative;
-            height: 120px;
-        }
+    .show-text {
+        opacity: 1;
+    }
 
-        button {
-            padding: 12px 28px;
-            font-size: 16px;
-            border: none;
-            border-radius: 30px;
-            cursor: pointer;
-        }
+    /* Hearts */
+    .heart {
+        position: absolute;
+        bottom: 120px;
+        font-size: 24px;
+        animation: floatUp 3s ease forwards;
+        color: #ff4d6d;
+    }
 
-        #yesBtn {
-            background-color: #28a745;
-            color: white;
+    @keyframes floatUp {
+        0% {
+            transform: translateY(0) scale(0.5);
+            opacity: 1;
         }
+        100% {
+            transform: translateY(-300px) scale(1.3);
+            opacity: 0;
+        }
+    }
 
-        #noBtn {
-            background-color: #dc3545;
-            color: white;
-            position: absolute;
-            left: 180px;
-        }
-    </style>
+</style>
 </head>
 
 <body>
 
-<div class="container">
-    <h1>Hey Love ❤️</h1>
+<div class="scene">
+    <div class="chocolate" id="choco">
+        <div class="wrapper">Silk ❤️</div>
+    </div>
 
-    <p>
-        From the day you came into my life, everything felt more beautiful.
-        Your smile, your care, your presence — everything means the world to me 🌏❤️.
-        I can't imagine my life without you. Tu ahes mhanun me ahe.
-        Tuzyashivay me kharach 0 ahe. Tuzyakt khup jast jiv ahe maza.
-        Khup jast bhariyes tu gampuda.
-        <br><br>
-        Gampudi Kharach tuzyashivay kon nahi maz hya jagat
-    </p>
-
-    <h2>मी तुझ्यासाठी तुझं सगळं काही आहे?</h2>
-
-    <div class="buttons">
-        <button id="yesBtn" onclick="yesClicked()">YES 💖</button>
-        <button id="noBtn">NO 😜</button>
+    <div class="love-text" id="loveText">
+        I Love You Gampudi ❤️
     </div>
 </div>
 
 <script>
-    const noBtn = document.getElementById("noBtn");
+    const choco = document.getElementById("choco");
+    const loveText = document.getElementById("loveText");
 
-    noBtn.addEventListener("mouseover", () => {
-        const x = Math.random() * 300 - 150;
-        const y = Math.random() * 120 - 60;
-        noBtn.style.transform = `translate(${x}px, ${y}px)`;
+    choco.addEventListener("click", () => {
+        choco.classList.add("open");
+        loveText.classList.add("show-text");
+
+        // create hearts
+        for (let i = 0; i < 15; i++) {
+            setTimeout(createHeart, i * 150);
+        }
     });
 
-    function yesClicked() {
-        document.body.innerHTML = `
-            <div style="
-                height:100vh;
-                display:flex;
-                justify-content:center;
-                align-items:center;
-                background:linear-gradient(135deg,#1a1a1a,#2a2a2a);
-                color:#ff6f91;
-                text-align:center;
-                font-family:Arial;
-            ">
-                <h1>
-                    माहीत होतं मला🙈🫂<br><br>
-                    कायम तुझाच Roo ❤️…
-                </h1>
-            </div>
-        `;
+    function createHeart() {
+        const heart = document.createElement("div");
+        heart.className = "heart";
+        heart.innerHTML = "❤️";
+        heart.style.left = Math.random() * window.innerWidth + "px";
+        document.body.appendChild(heart);
+
+        setTimeout(() => {
+            heart.remove();
+        }, 3000);
     }
 </script>
 
